<resources>
    <string name="app_name">Easy Ticket</string>
    <string name="hintUser">Usuario</string>
    <string name="hintPass">Contraseña</string>
    <string name="btnLogin">Iniciar sesión</string>
    <string name="recuperarPass">¿Olvidaste tu contraseña?</string>
    <string name="crearCuenta">¿No estás registrado?</string>
    <string name="imgDescription">Logo empresa</string>

    <string-array name="rol">
        <item>Seleccionar</item>
        <item>Cliente</item>
        <item>Supervisor</item>
        <item>Técnico</item>
    </string-array>
    <string name="btnSignUp">Registrarse</string>

    <string name="GestionTicket">Gestión de tickets</string>
    <string name="regTicket">Registrar</string>
    <string name="consTicket">Consultar</string>
    <string name="asigTicket">Asignar</string>
    <string name="repTicket">Reporte</string>
    <string name="atendTicket">Atender</string>
    <string name="profile">Perfil</string>
    <string name="config">Configuración</string>
    <string name="salir">Salir</string>
</resources>
