<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/GestionTicket">
        <menu>
            <group
                android:id="@+id/group_nav_main"
                android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_registrar"
                    android:checked="true"
                    android:icon="@android:drawable/ic_menu_myplaces"
                    android:title="@string/regTicket" />

                <item
                    android:id="@+id/nav_consultar"
                    android:icon="@android:drawable/ic_menu_my_calendar"
                    android:title="@string/consTicket" />

                <item
                    android:id="@+id/nav_asignar"
                    android:icon="@android:drawable/ic_menu_gallery"
                    android:title="@string/asigTicket" />

                <item
                    android:id="@+id/nav_reporte"
                    android:icon="@android:drawable/ic_menu_mapmode"
                    android:title="@string/repTicket" />

                <item
                    android:id="@+id/nav_atender"
                    android:icon="@android:drawable/ic_menu_mapmode"
                    android:title="@string/atendTicket" />
            </group>
        </menu>
    </item>

    <group
        android:id="@+id/group_nav_system"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="Settings" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="Logout" />

    </group>

</menu>
